--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,76 @@
 
 <body>
 
+<div class="mobile-menu">
+  <div class="row">
+    <div class="dropdown-wrapper">
+      <div class="dropdown-item">ru
+        <svg class="icon-arrow svg-icon">
+          <use xlink:href="img/sprite.svg#arrow-bottom"></use>
+        </svg>
+      </div>
+
+      <div class="dropdown-box">
+        <ul class="dropdown-menu">
+          <li><a href="#">ru</a></li>
+          <li><a href="#">en</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="btn-close"></div>
+  </div>
+
+  <div class="row">
+    <a href="entrance.html" class="btn btn-blue btn-entrance">
+      <span class="btn-icon"><svg class="svg-icon"><use xlink:href="img/sprite.svg#login"></use></svg></span>
+      <span class="btn-text">Войти</span>
+    </a>
+
+    <a href="registration.html" class="links-registration color-blue">
+      <span class="btn-icon"><svg class="svg-icon"><use xlink:href="img/sprite.svg#user"></use></svg></span>
+      <span class="links-text">Регистрация</span>
+    </a>
+  </div>
+
+
+  <ul class="menu">
+    <li><a href="#">О нас</a></li>
+    <li><a href="#">Тарифы</a></li>
+    <li><a href="#">Преимущества</a></li>
+    <li><a href="#">Акции</a></li>
+    <li><a href="#">Контакты</a></li>
+  </ul>
+
+
+  <div class="box-contacts">
+    <a href="mailto:mail@mail.com" class="mail">mail@mail.com</a>
+    <a href="#" class="color-blue">Получить презентацию</a>
+  </div>
+
+  <div class="box-contacts">
+    <a href="tel:+421949720057" class="phone">+421 (94) 972-00-57</a>
+    <a href="#" class="color-blue">Для консультации - звоните</a>
+  </div>
+
+  <ul class="list-social">
+    <li><a href="#">
+      <svg class="svg-icon">
+        <use xlink:href="img/sprite.svg#facebook"></use>
+      </svg>
+    </a></li>
+    <li><a href="#">
+      <svg class="svg-icon">
+        <use xlink:href="img/sprite.svg#instagram"></use>
+      </svg>
+    </a></li>
+    <li><a href="#" class="link-telegram">
+      <svg class="svg-icon">
+        <use xlink:href="img/sprite.svg#telegram"></use>
+      </svg>
+    </a></li>
+  </ul>
+</div>
+
 <div class="wrapper">
   <div class="content">
     <header>
@@ -97,7 +167,14 @@
             <a href="tel:+421949720057" class="phone">+421 (94) 972-00-57</a>
             <a href="#" class="color-blue">Для консультации - звоните</a>
           </div>
+
+          <div class="btn-burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
+
       </div>
     </header>
 
