--- a/app/cabinet-mega.html
+++ b/app/cabinet-mega.html
@@ -155,7 +155,7 @@
             <h1>План “Премиум”</h1>
 
             <ul class="list-currency">
-              <li><a href="#" class="active">EURUSD</a></li>
+              <li><a href="#">EURUSD</a></li>
               <li><a href="#">GBPUSD</a></li>
               <li><a href="#">AUDUSD</a></li>
               <li><a href="#">USDCAD</a></li>
