--- a/app/cabinet-premium.html
+++ b/app/cabinet-premium.html
@@ -155,7 +155,7 @@
             <h1>План “Премиум”</h1>
 
             <ul class="list-currency">
-              <li><a href="#" class="active">EURUSD</a></li>
+              <li><a href="#">EURUSD</a></li>
             </ul>
 
 
