--- a/app/cabinet-subscribe.html
+++ b/app/cabinet-subscribe.html
@@ -33,8 +33,11 @@
     <div class="cabinet">
       <div class="container">
         <div class="sidebar">
-          <div class="btn-close-sidebar"></div>
-          <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
+          <div class="sidebar-header">
+            <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
+            <div class="btn-close-sidebar"></div>
+          </div>
+
 
           <div class="time-box">
             <p>Серверное время (GMT +1)</p>
@@ -61,19 +64,19 @@
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-base.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon"><use
                     xlink:href="img/sprite.svg#icon-menu2"></use></svg></span><span class="menu-sidebar__links-text">План "Базовый"</span>
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-premium.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon"><use
                     xlink:href="img/sprite.svg#icon-menu3"></use></svg></span><span class="menu-sidebar__links-text">План "Премиум"</span>
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links font-bold">
+              <a href="cabinet-mega.html" class="menu-sidebar__links font-bold">
                 <span class="menu-sidebar__links-icon"><img src="img/premium-quality.svg" alt=""></span><span
                   class="menu-sidebar__links-text">План "Мега"</span>
               </a>
@@ -91,7 +94,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-video.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon fill-white"><use
                     xlink:href="img/sprite.svg#icon-menu7"></use></svg></span><span class="menu-sidebar__links-text">Обучающие видео по системе</span>
               </a>
@@ -115,13 +118,13 @@
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-edit.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon fill-white"><use
                     xlink:href="img/sprite.svg#icon-menu11"></use></svg></span><span class="menu-sidebar__links-text">Редактировать профиль/настройки</span>
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-help.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon fill-white"><use
                     xlink:href="img/sprite.svg#support"></use></svg></span><span class="menu-sidebar__links-text">Служба поддержки</span>
               </a>
