--- a/app/cabinet-edit.html
+++ b/app/cabinet-edit.html
@@ -33,7 +33,11 @@
     <div class="cabinet">
       <div class="container">
         <div class="sidebar">
-          <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
+          <div class="sidebar-header">
+            <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
+            <div class="btn-close-sidebar"></div>
+          </div>
+
 
           <div class="time-box">
             <p>Серверное время (GMT +1)</p>
@@ -60,19 +64,19 @@
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-base.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon"><use
                     xlink:href="img/sprite.svg#icon-menu2"></use></svg></span><span class="menu-sidebar__links-text">План "Базовый"</span>
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-premium.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon"><use
                     xlink:href="img/sprite.svg#icon-menu3"></use></svg></span><span class="menu-sidebar__links-text">План "Премиум"</span>
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links font-bold">
+              <a href="cabinet-mega.html" class="menu-sidebar__links font-bold">
                 <span class="menu-sidebar__links-icon"><img src="img/premium-quality.svg" alt=""></span><span
                   class="menu-sidebar__links-text">План "Мега"</span>
               </a>
@@ -90,7 +94,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-video.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon fill-white"><use
                     xlink:href="img/sprite.svg#icon-menu7"></use></svg></span><span class="menu-sidebar__links-text">Обучающие видео по системе</span>
               </a>
@@ -114,13 +118,13 @@
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-edit.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon fill-white"><use
                     xlink:href="img/sprite.svg#icon-menu11"></use></svg></span><span class="menu-sidebar__links-text">Редактировать профиль/настройки</span>
               </a>
             </li>
             <li>
-              <a href="#" class="menu-sidebar__links">
+              <a href="cabinet-help.html" class="menu-sidebar__links">
                 <span class="menu-sidebar__links-icon"><svg class="svg-icon fill-white"><use
                     xlink:href="img/sprite.svg#support"></use></svg></span><span class="menu-sidebar__links-text">Служба поддержки</span>
               </a>
@@ -131,6 +135,11 @@
         <div class="cabinet-content">
           <div class="cabinet-content__wrap">
             <div class="cabinet-header">
+              <div class="btn-menu-cabinet">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#menu"></use>
+                </svg>
+              </div>
               <a href="#" class="cabinet-header__links links-mail">
                 <svg class="svg-icon">
                   <use xlink:href="img/sprite.svg#mail"></use>
